Add Readme image

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<body>
 		<h1 id="header">TO DO LIST</h1>
 		<div class="main">
-			<form class="container" class="needs-validation" novalidate>
+			<form class="container">
 				<div class="input-group-prepend">
 					<input
 						type="text"
